@@ -7,7 +7,7 @@ describe Parslet::Atoms do
   describe Parslet::Atoms::Str do
     let(:parslet) { str('foo') }
     it "should call back visitor" do
-      visitor.should_receive(:str).with('foo').once
+      visitor.should_receive(:visit_str).with('foo').once
       
       parslet.accept(visitor)
     end 
@@ -15,7 +15,7 @@ describe Parslet::Atoms do
   describe Parslet::Atoms::Re do
     let(:parslet) { match['abc'] }
     it "should call back visitor" do
-      visitor.should_receive(:re).with('[abc]').once
+      visitor.should_receive(:visit_re).with('[abc]').once
       
       parslet.accept(visitor)
     end 
@@ -23,7 +23,7 @@ describe Parslet::Atoms do
   describe Parslet::Atoms::Sequence do
     let(:parslet) { str('a') >> str('b') }
     it "should call back visitor" do
-      visitor.should_receive(:sequence).with(Array).once
+      visitor.should_receive(:visit_sequence).with(Array).once
       
       parslet.accept(visitor)
     end 
@@ -31,7 +31,7 @@ describe Parslet::Atoms do
   describe Parslet::Atoms::Repetition do
     let(:parslet) { str('a').repeat(1,2) }
     it "should call back visitor" do
-      visitor.should_receive(:repetition).with(1, 2, Parslet::Atoms::Base).once
+      visitor.should_receive(:visit_repetition).with(1, 2, Parslet::Atoms::Base).once
       
       parslet.accept(visitor)
     end 
@@ -39,7 +39,7 @@ describe Parslet::Atoms do
   describe Parslet::Atoms::Alternative do
     let(:parslet) { str('a') | str('b') }
     it "should call back visitor" do
-      visitor.should_receive(:alternative).with(Array).once
+      visitor.should_receive(:visit_alternative).with(Array).once
       
       parslet.accept(visitor)
     end 
@@ -47,7 +47,7 @@ describe Parslet::Atoms do
   describe Parslet::Atoms::Named do
     let(:parslet) { str('a').as(:a) }
     it "should call back visitor" do
-      visitor.should_receive(:named).with(:a, Parslet::Atoms::Base).once
+      visitor.should_receive(:visit_named).with(:a, Parslet::Atoms::Base).once
       
       parslet.accept(visitor)
     end 
@@ -55,7 +55,7 @@ describe Parslet::Atoms do
   describe Parslet::Atoms::Entity do
     let(:parslet) { Parslet::Atoms::Entity.new('foo', :context, lambda {}) }
     it "should call back visitor" do
-      visitor.should_receive(:entity).with('foo', :context, Proc).once
+      visitor.should_receive(:visit_entity).with('foo', :context, Proc).once
       
       parslet.accept(visitor)
     end 
@@ -63,7 +63,7 @@ describe Parslet::Atoms do
   describe Parslet::Atoms::Lookahead do
     let(:parslet) { str('a').absnt? }
     it "should call back visitor" do
-      visitor.should_receive(:lookahead).with(false, Parslet::Atoms::Base).once
+      visitor.should_receive(:visit_lookahead).with(false, Parslet::Atoms::Base).once
       
       parslet.accept(visitor)
     end 
